<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.yourinventit.moat.osgi.example3</groupId>
	<artifactId>sparki-example-osgi</artifactId>
	<version>1.0.0</version>
	<packaging>bundle</packaging>
	<name>MOAT Java/OSGi + OSGi Example :: Sparki Application Example</name>
	<description>MOAT Java/OSGi + OSGi Example :: Sparki Application Example</description>
	<properties>
		<api.version>4.1.5</api.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<distributionManagement>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>SharedLibrariesRepository</id>
			<name>Shared Libraries Repository</name>
			<url>file://${basedir}/target</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>ProjectLocalLibrariesRepository</id>
			<name>Repository</name>
			<url>file://${basedir}/src/main/libs</url>
			<layout>default</layout>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.yourinventit</groupId>
			<artifactId>inventit-dmc-api</artifactId>
			<version>${api.version}</version>
			<classifier>prod</classifier>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.3.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.enterprise</artifactId>
			<version>4.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.8.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<!-- Android bundled version -->
			<version>1.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20090211</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.rxtx</groupId>
			<artifactId>rxtx</artifactId>
			<version>2.1.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.fusesource.mqtt-client</groupId>
			<artifactId>mqtt-client</artifactId>
			<version>1.10</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.j256.ormlite</groupId>
			<artifactId>ormlite-core</artifactId>
			<version>4.40</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.spaceprogram</groupId>
			<artifactId>KittyCache</artifactId>
			<version>1.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<executions>
					<execution>
						<id>default-test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<argLine>-Dfile.encoding=UTF-8 -Xmx512m -XX:MaxPermSize=256m</argLine>
							<excludes>
								<exclude>**/*InContainerTest.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>**/*.log</include>
								<include>*.log</include>
								<include>test/**/*</include>
								<include>test</include>
							</includes>
							<excludes>
								<exclude>.git/*</exclude>
								<exclude>.hg/*</exclude>
							</excludes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.4.0</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<!-- Pakages depending on other bundles go here. -->
						<Export-Package></Export-Package>
						<Import-Package>com.yourinventit.dmc.*</Import-Package>
						<!-- Objects under the following packages are expanded by the plugin. -->
						<Private-Package>io.inventit.moat.osgi.example3.*</Private-Package>
						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
						<Bundle-Activator>io.inventit.moat.osgi.example3.Activator</Bundle-Activator>
						<!-- see http://stackoverflow.com/questions/6273061/issue-with-adding-jar-in-osgi-bundle-using-embed-dependency -->
						<!-- Excludes inventit* library as it is provided as OSGi services -->
						<Embed-Dependency>*;scope=compile|runtime;artifactId=!inventit*</Embed-Dependency>
						<Embed-Transitive>true</Embed-Transitive>
						<!-- All packages imported in this bundle go here. -->
						<!-- see http://stackoverflow.com/questions/8727054/how-to-overcome-missing-optionally-imported-packageissue-in-osgi -->
						<Import-Package>*;resolution:=optional</Import-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>